# symtensor

./: .coveragerc  .gitignore  .gitlab-ci.yml  README.md  TODO.md  __init__.py  pyproject.toml  setup.cfg  symmetric_tensor.py  symmetric_tensor_algdesign.py  symmetric_tensor_torch.py
docs/: Getting_started.md  README.md  _config.yml  _toc.yml  backends.md  symmetric_formats.md  symtensor_example.py  testing  tests  use_case_timings.py
docs/api/: array.md  symalg.md
docs/developers/: comparitive_timings.py  symmetric_tensor_algdesign.py
docs/sources/: permcls_symtensor.py  utils.py
docs/symtensor/: base.py  decomp_symmtensor.py  dense_symtensor.py  symalg.py  torch_symtensor.py
module_purgatory/: torch_symmetric_tensor.py
symmetric_tensor/: __init__.py  permcls_symmetric_tensor.py  torch_symmetric_tensor.py
symtensor/: __init__.py  base.py  decomp_symmtensor.py  decomp_utils.py  dense_symtensor.py  flat_symtensor.py  permcls_symtensor.py  symalg.py  torch_symtensor.py  utils.py
symtensor/testing/: api.py  decomp_tensor_test.py  unittests.py  utils.py
symtensor/tests/: test_dense_numpy.py  test_dense_torch.py  test_permcls_numpy.py  test_permcls_torch.py  test_utils.py
tests/: test_dense_numpy.py  test_dense_torch.py
