[metadata]
name    = symtensor
version = 0.0.1a
description = A toolbox for creating and operating on symmetric tensor
long_description = file: README.md
long_description_content_type = text/markdown

requires-python = ">=3.8"

url =

author = Alexandre René
author_email = a.rene@fz-juelich.de
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Statistics
keywords =
    mathematics
    computer science
    tensor
    symmetric tensor
    numpy
    pytorch
    tlash

[options]
packages =
    symtensor

install_requires =
    numpy
    scityping
    more_itertools
#    mackelab_toolbox

[options.extras_require]
test =
    pytest
    torch   # (CUDA, 800MB)
#    pip install torch --extra-index-url https://download.pytorch.org/whl/cpu  (CPU-only, 200MB)
    pydantic

doc =
    ipykernel
    holoviews
